# sclang

./: .gitignore  .travis.yml  BUILD  CMakeLists.txt  README.md  WORKSPACE  sclang.cpp
.github/workflows/: build-and-test.yml  main.yml
include/: CMakeLists.txt
include/sclang/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  MLIRGen.h  Ops.td  Parser.h  Passes.h
include/sclang/SclDialect/: CMakeLists.txt  Dialect.h  Ops.td  SclBase.td  SclOps.td  SclTypes.h
include/sclang/SclGen/: AST.h  Lexer.h  MLIRGen.h  Parser.h
include/sclang/SclToStd/: Passes.h
include/sclang/SclTransforms/: Passes.td
lib/: CMakeLists.txt
lib/SclDialect/: CMakeLists.txt  Canonicalize.cpp  Dialect.cpp  SclOps.cpp  SclTypes.cpp
lib/SclGen/: AST.cpp  CMakeLists.txt  Lexer.cpp  MLIRGen.cpp
lib/SclToStd/: CMakeLists.txt  LowerToSCF.cpp  LowerToStd.cpp
lib/SclTransforms/: CMakeLists.txt  LowerToStd.cpp
mlir/: CMakeLists.txt  Dialect.cpp  LowerToLLVM.cpp  LowerToLoop.cpp  LowerToSCF.cpp  LowerToStd.cpp  MLIRGen.cpp
parser/: AST.cpp  CMakeLists.txt  Lexer.cpp
sclang/: .LowerToLLVM.cpp.swp  BUILD  CMakeLists.txt  LowerToLLVM.cpp  sclang.cpp
sclang-gen/: BUILD  CMakeLists.txt  sclang-gen.cpp
test/: BUILD  CMakeLists.txt  block_attributes.scl  index_vars.scl  integer_literals.scl  jump_labels.scl  lit.cfg.py  lit.site.cfg.py.in  lit_test.bzl  mlirgen.scl  parser.scl  real_literals.scl  time_literals.scl
test/Parser/: abs.scl  block_attributes.scl  expressions.scl  for_do.scl  index_vars.scl  instance.scl  integer_literals.scl  jump_labels.scl  real_literals.scl  structured_vars.scl  symbols.scl  time_literals.scl
test/SclGen/MLIR/: absf.scl  absi.scl  constants.scl  debugprint.scl  empty-function.scl  for_do.scl  function_block.scl  functions.scl  if_then_else.scl  indices.scl  instance.scl  mlirgen.scl  repeat_until.scl  struct.scl  time_literals.scl  while_do.scl
test/SclGen/Parse/: BUILD  abs.scl  block_attributes.scl  expressions.scl  for_do.scl  functions.scl  if_then_else.scl  index_vars.scl  instance.scl  integer_literals.scl  jump_labels.scl  real_literals.scl  structured_vars.scl  symbols.scl  time_literals.scl
test/SclToStd/: absi.scl  expressions.mlir  return.scl
test/SclTransforms/: absf.scl  absi.scl  expressions.mlir  functions.scl  return.scl
test/StdLowering/: absf.scl  absi.scl  expressions.mlir  return.scl
test/mlir/: abs.scl  absf.scl  absi.scl  empty-function.scl  mlirgen.scl
test/sclang/: BUILD  absi.scl  jit.scl
unittests/: CMakeLists.txt
unittests/Lexer/: CMakeLists.txt  LexerTest.cpp
